--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script src="./js/jquery.tmpl.min.js"></script>
 <script src="./js/jquery.easing-1.3.min.js"></script>
-<script src="./js/fbDeferred.js"></script>
 <script src="./js/main.js"></script>
-<script src="./js/facebook.js"></script>
+<script src="./js/fb.deferred.js"></script>
+<script src="./js/fb.js"></script>
 </body>
 </html>
